2011-11-04  Norbert Preining  <preining@logic.at>

	* updmap.pl: small fixes to documentation of updmap.pl, and fixes
	to --syncwithtrees and --listavail, patch from Hironori Kitagawa

2011-11-02  Norbert Preining  <preining@logic.at>

	* updmap.pl: apply patch from Hironori Kitagawa that fixes
	a --syncwithtrees problem in searching for map names.

2011-10-26  Norbert Preining  <preining@logic.at>

	* updmap.pl: apply patch from ptexlive Tsuchimura to support
	kanjiEmbed setting, and generate kanjix.map.

2011-09-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Adapt to script_links.am using relpath.
	(run-texlinks): Declare as .PHONY; skip texlinks for WIN32.

2011-09-09  Karl Berry  <karl@tug.org>

	* tests: new subdir, with first updmap test, that doesn't really
	work yet but passes anyway.
	* Makefile.am (TESTS): add tests/updmap-cmdline-test.pl.
	* updmap.pl (read_option_vals): don't call getopt twice (from Norbert).
	Don't complain about non-option args, that is how --enable/--disable
	are currently (mis)handled.
	(writeLines, copyFile, setupOutputDir, SetupCfgFile): do nothing
	if $dry_run.

2011-09-05  Karl Berry  <karl@tug.org>

	* texconfig-dialog (runDialog): only clear screen if we actually
	run the dialog program.
	(findDialog): do not bother setting DIALOG_TERM and
	DIALOG_TERMINFO if we don't find a system dialog program,
	since we're just going to abort anyway.
	* texmf: remove subdir with terminfo definitions.
	* Makefile.am (texconfdir, nobase_dist_texconf_DATA): likewise rm.

2011-09-04  Norbert Preining  <preining@logic.at>

	* updmap.pl (BEGIN): older versions are supported again.
	(read_for_set_options): new fn.
	(processOptions): call it, so we call getopt twice,
	so we can avoid using the =s{1,2} specifier (for --setoption)
	which needs perl 5.8.8.
	Also, complain about non-option arguments.
	http://tug.org/pipermail/tex-live/2011-July/029764.html
	http://tug.org/pipermail/tex-k/2011-September/002329.html
